# scuttlesort

./: .gitignore  README.md
doc/: Makefile  README.md  helvet.tex
js/: LICENSE  README.md  demo.js  package-lock.json  package.json  scuttlesort.js
py/: README.md  setup.cfg
py/src/scuttlesort/: __init__.py  dag.dot  demo.py
