[metadata]
name = scuttlesort
version = 0.0.6
author = Christian Tschudin
author_email = christian.tschudin@unibas.ch
description = ScuttleSort - incremental convergent topological sort for Secure Scuttlebutt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tschudin/scuttlesort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
